<resources>
    <!-- A -->
    <string name="app_name">TradR</string>
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
    <![CDATA[
        <b>Desde 2015</b><br>
        Versao %s<br><br>
        <a href="http://www.livrowebservices.com.br/index.html">http://livrowebservices.com.br</a><br><br>
        <a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
        <a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
        <a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
    ]]>
    </string>
    <string name="action_search">Busca</string>
    <string name="action_save">Salvar</string>
    <string name="about_dialog_title">TradR</string>

    <!-- C -->
    <string name="feed">Feed</string>
    <string name="configuracoes">Configurações</string>
    <string name="produtos">Meus Produtos</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="trocas">Minhas Trocas</string>

    <!-- L -->
    <string name="perfil">Perfil</string>

    <!-- M -->
    <string name="msg_error_campo_obrigatorio">Campo obrigatório.</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível</string>
    <string name="msg_carro_sem_video">Carro sem vídeo cadastrado</string>
    <string name="msg_url_invalida">URL de vídeo inválida</string>
    <string name="msg_error_io">Ocorreu algum erro ao buscar os dados.</string>
    <string name="msg_erro_io_timeout">Erro de timeout na consulta.</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>

    <!-- N -->
    <string name="nav_drawer_username">Victor Mendonça</string>
    <string name="nav_drawer_email">victorairesm@gmail.com</string>
    <string name="novo_produto">Novo Produto</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="sobre">Sobre</string>
    <string name="ajuda">Ajuda</string>

    <!-- T -->
    <string name="title_activity_produto">Produto</string>

    <!-- EditProduto -->
    <string name="categoria">Categoria</string>
    <string name="usado">Usado</string>
    <string name="novo">Novo</string>
    <string name="seminovo">Semi-novo</string>
    <string name="prod_nome">O que é?</string>
    <string name="prod_desc">Descreva seu produto:</string>
    <string name="valor">Em quanto você avalia?</string>
    <string name="transition_key">img_transition_key</string>

    <!-- V -->
    <string name="vazio" />
    <string name="valorEdit">Valor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed">Feed</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
