<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="produto"
            type="br.com.victor.tradr.domain.Produto" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/estado" />

                <RadioGroup
                    android:id="@+id/radioTipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/estadoUsado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/usado" />

                    <RadioButton
                        android:id="@+id/estadoNovo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/novo" />

                    <RadioButton
                        android:id="@+id/estadoSemiNovo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seminovo" />
                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tNomeEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prod_nome"
                        android:singleLine="true"
                        android:text="@{produto.nome}"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Desc -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tDescEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/prod_desc"
                        android:text="@{produto.descricao}" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tValor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/valor"
                        android:text="@{produto.valor.toString()}"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>